Translate in progress 4

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,18 +11,18 @@ markdown_extensions:
 pages:
 - Home: 'index.md'
 - FAQs:
-    - 'Using This Site FAQs': 'faqs/docs-faqs.md'
-    - 'General Loop FAQs': 'faqs/FAQs.md'
-    - 'Omnipod FAQs': 'faqs/omnipod-faqs.md'
+    - 'Использование раздела FAQ на сайте': 'faqs/docs-faqs.md'
+    - 'Общие вопросы по Loop': 'faqs/FAQs.md'
+    - 'Вопросы по Omnipod': 'faqs/omnipod-faqs.md'
     - 'Branch FAQs': 'faqs/branch-faqs.md'
-    - 'Update/Rebuild Loop FAQs': 'faqs/update-faqs.md'
-    - 'iOS 13 FAQs': 'faqs/ios13.md'
-    - 'RileyLink FAQs': 'faqs/rileylink-faqs.md'
-    - 'Algorithm FAQs': 'faqs/algorithm-faqs.md'
-    - 'CGM FAQs': 'faqs/cgm-faqs.md'
-    - 'Safety Tips': 'faqs/safety-faqs.md'
+    - 'Обновление/Пересборка Loop': 'faqs/update-faqs.md'
+    - 'Вопросы по iOS 13': 'faqs/ios13.md'
+    - 'Вопросы по RileyLink': 'faqs/rileylink-faqs.md'
+    - 'Вопросы по алгоритму': 'faqs/algorithm-faqs.md'
+    - 'Системы НМГ (CGM)': 'faqs/cgm-faqs.md'
+    - 'Вопросы безопасности': 'faqs/safety-faqs.md'
 - Build App:
-    - Overview: 'build/overview.md'
+    - 'Кратко': 'build/overview.md'
     - 'Step 1 Compatible Computer': 'build/step1.md'
     - 'Step 2 Compatible iPhone/iPod touch': 'build/step2.md'
     - 'Step 3 Compatible Pump': 'build/step3.md'
